<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/runningProofsFragment"
        android:icon="@drawable/thermometer"
        android:title="@string/RunningProofs_Menu"
        />
    <item
        android:id="@+id/certificatesFragment"
        android:icon="@drawable/draft"
        android:title="@string/Certificates_Menu"/>
    <item
        android:id="@+id/devicesFragment"
        android:icon="@drawable/deployed_code"
        android:title="@string/Devices_Menu"
        />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/notifications"
        android:title="@string/Notifications_Menu"/>
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/person"
        android:title="@string/Account_Menu"/>

</menu>